--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SmartHomeCost</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <div id='root'></div>
+<body class="">
+    <div id='root'>
+    </div>
 </body>
 </html>
