--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="">
-    <div id='root'>
+    <div id="wrapper">
+        <div id='root'>
+        </div>
     </div>
 </body>
 </html>
