--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title>SmartHomeCost</title>
         <link rel="stylesheet" href="./main.css">
     </head>
-    <body class="">
+    <body>
         <div id='root'>
         </div>
     </body>
